<resources>
    <string name="app_name">Music Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="now_playing">Now Playing</string>
    <string name="menu">Menu</string>
    <string name="music_image">Music Image</string>
    <string name="gradient_color">Gradient Color</string>
    <string name="this_song_name">This song Name</string>
    <string name="chris_brown">Chris Brown</string>
    <string name="shuffle_off">Shuffle Off</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play Pause</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
    <string name="file_name">File Name</string>
    <string name="total_duration">4:00</string>
    <string name="played_duration">1:38</string>
    <string name="music_art">Music Art</string>
    <string name="more">more</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="album_image">album image</string>
    <string name="album">Album</string>
    <string name="album_gradient">Album gradient</string>
    <string name="search">Search</string>
    <string name="sort_by">sort by</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
</resources>