<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/player_bg"
    android:orientation="vertical"
    tools:context=".activities.PlayerActivity">

    <RelativeLayout
        android:id="@+id/layoutTopButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradient_bg"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_left"
            android:contentDescription="@string/back"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/now_playing"
            android:layout_toStartOf="@+id/ivMenu"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/ivBack"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/menu"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/layoutTopButton">

        <ImageView
            android:id="@+id/ivCoverArt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/music_image"
            android:scaleType="centerCrop"
            android:src="@drawable/felix"/>
        <ImageView
            android:id="@+id/ivGradient"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/gradient_color"
            android:src="@drawable/gradient_bg"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_song_name"
        android:layout_below="@+id/card"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />
    <TextView
        android:id="@+id/tvSongArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chris_brown"
        android:layout_below="@+id/tvSongName"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <RelativeLayout
        android:id="@+id/layoutBottomButtons"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:background="@drawable/gradient_bg">

        <ImageView
            android:id="@+id/ivShuffle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/shuffle_off"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_shuffle_off"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"/>
        <ImageView
            android:id="@+id/ivPrevious"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/previous"
            android:layout_toStartOf="@+id/playPause"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_skip_previous_24"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true"
            android:contentDescription="@string/play_pause" />

        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/next"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_skip_next_24"
            android:layout_toEndOf="@+id/playPause"
            android:layout_marginStart="16dp"/>
        <ImageView
            android:id="@+id/ivRepeat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/repeat"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_repeat_off"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutSeekBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@id/layoutBottomButtons">

        <TextView
            android:id="@+id/tvDurationPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/played_duration"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/tvTotalDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_duration"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>



</RelativeLayout>