<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/audio_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#111111"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivMusic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/music_art"
        android:src="@mipmap/ic_launcher_round"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/tvMusicFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:layout_toEndOf="@id/ivMusic"
        android:layout_marginStart="10dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/ivMoreMenu"
        android:textColor="@color/white"/>
    <ImageView
        android:id="@+id/ivMoreMenu"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/more"
        android:src="@drawable/ic_more"
        android:layout_alignParentEnd="true"
        android:padding="5dp"/>

</RelativeLayout>